import to IDEA guide